[gd_scene load_steps=25 format=3 uid="uid://cf4ec511ogdib"]

[ext_resource type="Script" path="res://Scenes/TudoPronto/Level1/Scene1.gd" id="1_le1tg"]
[ext_resource type="Texture2D" uid="uid://b1rpij5tbokek" path="res://Assets/wood-floor-texture.jpg" id="2_fogx2"]
[ext_resource type="Theme" uid="uid://dsjyqvry1y226" path="res://ThemeEditor/menus_theme.tres" id="3_go60m"]
[ext_resource type="ButtonGroup" uid="uid://dpi5umlb8ints" path="res://ThemeEditor/BG2.tres" id="4_rvaan"]
[ext_resource type="Texture2D" uid="uid://btfny0ednqo0k" path="res://Assets/crate_onions.png" id="5_bgt0x"]
[ext_resource type="Texture2D" uid="uid://cvpfdar21o2o1" path="res://Assets/pan_onions.png" id="6_vbv7b"]
[ext_resource type="Texture2D" uid="uid://ddjfu0lijkue0" path="res://Assets/onion_rings.png" id="7_facyw"]
[ext_resource type="LabelSettings" uid="uid://cu58gbxvkh0uq" path="res://ThemeEditor/label_settings.tres" id="8_8dgxo"]
[ext_resource type="ButtonGroup" uid="uid://dt1kacio8q381" path="res://ThemeEditor/BG3.tres" id="9_nmhau"]
[ext_resource type="Texture2D" uid="uid://cwg1mtymkspa6" path="res://Assets/frying_pan.png" id="10_0se6g"]
[ext_resource type="Texture2D" uid="uid://ilnnsw5ccc3b" path="res://Assets/knife.png" id="11_cftnq"]
[ext_resource type="Texture2D" uid="uid://bxtx2ynnawjdm" path="res://Assets/stove.png" id="12_wsu1n"]
[ext_resource type="PackedScene" uid="uid://v3ankl06dpwe" path="res://Models/kitchencounter_straight_a_backsplash.tscn" id="13_t0uxa"]
[ext_resource type="PackedScene" uid="uid://qsx6ti0x7lj3" path="res://Models/kitchencounter_innercorner_backsplash.tscn" id="14_xpnmy"]
[ext_resource type="PackedScene" uid="uid://4r3ylva07f66" path="res://Models/wall.tscn" id="15_tu14f"]
[ext_resource type="PackedScene" uid="uid://cewv8iqxjvft3" path="res://Models/wall_window.tscn" id="16_wooty"]
[ext_resource type="PackedScene" uid="uid://b7vclw7gmvpu7" path="res://Models/wall_half.tscn" id="17_ewj8d"]
[ext_resource type="PackedScene" uid="uid://cgmjci3l4sd3y" path="res://Assets/restaurant_gltf/cuttingboard.gltf" id="18_287u2"]
[ext_resource type="PackedScene" uid="uid://du2agx53isorv" path="res://Assets/restaurant_gltf/knife.gltf" id="19_bx857"]
[ext_resource type="PackedScene" uid="uid://lrrjvcnwlbi3" path="res://Models/plate_dirty.tscn" id="20_s21iy"]
[ext_resource type="Texture2D" uid="uid://cnn3xdr0ywhc8" path="res://Assets/back_icon.png" id="21_756uf"]

[sub_resource type="BoxShape3D" id="BoxShape3D_b4xlg"]
size = Vector3(30, 1, 30)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iqnrd"]
albedo_texture = ExtResource("2_fogx2")
uv1_scale = Vector3(10, 10, 10)

[sub_resource type="BoxMesh" id="BoxMesh_bjeso"]
material = SubResource("StandardMaterial3D_iqnrd")
size = Vector3(80, 2, 80)

[node name="Main" type="Node3D"]
script = ExtResource("1_le1tg")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.00996, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_b4xlg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_bjeso")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.390804, -0.906769, -0.158252, 0.728786, -0.409831, 0.548553, -0.562267, 0.0990449, 0.821003, -26.0655, 34.8897, 25.4685)
shadow_enabled = true

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(0.70474, 0.359718, -0.61151, 0.0694738, 0.822797, 0.564073, 0.706056, -0.440008, 0.554867, 0, 0.490025, 2.9982)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, -1.78814e-07, 3.8743e-07, -2.98023e-08, 1, -4.32134e-07, -3.27826e-07, -4.47035e-08, 1, -4.27146, 0.352954, 30.1049)
projection = 1
size = 28.159

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -160.12
offset_bottom = 160.12
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="P1HBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.466
anchor_bottom = 1.463
offset_left = -306.0
offset_top = 0.351852
offset_right = -96.0
offset_bottom = -23.3911
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.04)
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="P1A1Button" type="Button" parent="Control/P1HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../P1A3Button")
focus_neighbor_bottom = NodePath("../P1A2Button")
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 8
theme = ExtResource("3_go60m")
toggle_mode = true
button_mask = 0
button_group = ExtResource("4_rvaan")
icon = ExtResource("5_bgt0x")
icon_alignment = 1

[node name="P1A2Button" type="Button" parent="Control/P1HBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../P1A1Button")
focus_neighbor_bottom = NodePath("../P1A3Button")
mouse_default_cursor_shape = 8
theme = ExtResource("3_go60m")
toggle_mode = true
button_group = ExtResource("4_rvaan")
icon = ExtResource("6_vbv7b")
icon_alignment = 1

[node name="P1A3Button" type="Button" parent="Control/P1HBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../P1A2Button")
focus_neighbor_bottom = NodePath("../P1A1Button")
mouse_default_cursor_shape = 8
theme = ExtResource("3_go60m")
toggle_mode = true
button_group = ExtResource("4_rvaan")
icon = ExtResource("7_facyw")
icon_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.465
anchor_bottom = 1.463
offset_left = -306.0
offset_top = -0.0883942
offset_right = -96.0
offset_bottom = 0.488861

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -47.5
offset_right = 63.0
offset_bottom = 47.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Fritar
cebola"
label_settings = ExtResource("8_8dgxo")
horizontal_alignment = 1

[node name="Control2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -160.12
offset_bottom = 160.12
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="P2HBoxContainer" type="VBoxContainer" parent="Control2"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.429
anchor_bottom = 1.426
offset_left = 107.0
offset_top = 3.00296
offset_right = 301.0
offset_bottom = -3.04227
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 4
alignment = 1

[node name="P2A1Button" type="Button" parent="Control2/P2HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme = ExtResource("3_go60m")
toggle_mode = true
button_group = ExtResource("9_nmhau")
icon = ExtResource("10_0se6g")
icon_alignment = 1

[node name="P2A2Button" type="Button" parent="Control2/P2HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("3_go60m")
toggle_mode = true
button_group = ExtResource("9_nmhau")
icon = ExtResource("11_cftnq")
icon_alignment = 1

[node name="P2A3Button" type="Button" parent="Control2/P2HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("3_go60m")
toggle_mode = true
button_group = ExtResource("9_nmhau")
icon = ExtResource("12_wsu1n")
icon_alignment = 1

[node name="VoltarButton" type="Button" parent="."]
offset_left = 29.0
offset_top = 27.0
offset_right = 316.0
offset_bottom = 164.0
theme = ExtResource("3_go60m")
text = " Voltar"
icon = ExtResource("21_756uf")

[node name="Counter" type="Node3D" parent="."]
transform = Transform3D(1.38305, 0, 0, 0, 1.38305, 0, 0, 0, 1.38305, -5.51886, 0, 6.86926)

[node name="kitchencounter_straight_A_backsplash2" parent="Counter" instance=ExtResource("13_t0uxa")]
transform = Transform3D(3.90215, 0, -3.12621, 0, 5, 0, 3.12621, 0, 3.90215, -1.522, 0, -9.846)

[node name="kitchencounter_innercorner_backsplash2" parent="Counter" instance=ExtResource("14_xpnmy")]
transform = Transform3D(3.13833, 0, 3.89242, 0, 5, 0, -3.89242, 0, 3.13833, -8.598, 0, -15.575)

[node name="kitchencounter_straight_A_backsplash3" parent="Counter" instance=ExtResource("13_t0uxa")]
transform = Transform3D(3.90215, 0, -3.12621, 0, 5, 0, 3.12621, 0, 3.90215, 6.21978, 0, -3.66817)

[node name="kitchencounter_innercorner_backsplash3" parent="Counter" instance=ExtResource("14_xpnmy")]
transform = Transform3D(3.90216, 0, -3.12621, 0, 5, 0, 3.12621, 0, 3.90216, 14.021, 0, 2.51741)

[node name="wall2" parent="." instance=ExtResource("15_tu14f")]
transform = Transform3D(5.96961, 0, -4.90001, 0, 7.7231, 0, 4.90001, 0, 5.96961, -11.0187, -0.343378, -21.3725)

[node name="wall_window_closed2" parent="." instance=ExtResource("16_wooty")]
transform = Transform3D(5.96782, 0, -4.90202, 0, 7.723, 0, 4.90202, 0, 5.96782, 11.702, -0.343, -2.82479)

[node name="wall_half2" parent="." instance=ExtResource("17_ewj8d")]
transform = Transform3D(5.96782, 0, -4.90202, 0, 7.723, 0, 4.90202, 0, 5.96782, 22.486, -0.343, 5.92857)

[node name="cuttingboard2" parent="." instance=ExtResource("18_287u2")]
transform = Transform3D(3.83152, 0, 0, 0, 3.83152, 0, 0, 0, 3.83152, 0, 7.4252, 0)

[node name="knife2" parent="." instance=ExtResource("19_bx857")]
transform = Transform3D(2.09383, 1.58137, 6.9124e-08, 0, -1.14695e-07, 2.6239, 1.58137, -2.09383, -9.15244e-08, 0.933859, 8.12135, 0.407116)

[node name="plate_dirty2" parent="." instance=ExtResource("20_s21iy")]
transform = Transform3D(5.0072, 0, 0, 0, 5.0072, 0, 0, 0, 5.0072, 1.95087, 7.63433, 6.3027)

[connection signal="focus_entered" from="Control/P1HBoxContainer/P1A1Button" to="." method="_on_p1_a1_button_focus_entered"]
[connection signal="toggled" from="Control/P1HBoxContainer/P1A1Button" to="." method="_on_p1_a1_button_toggled"]
[connection signal="focus_entered" from="Control/P1HBoxContainer/P1A2Button" to="." method="_on_p1_a2_button_focus_entered"]
[connection signal="toggled" from="Control/P1HBoxContainer/P1A2Button" to="." method="_on_p1_a2_button_toggled"]
[connection signal="focus_entered" from="Control/P1HBoxContainer/P1A3Button" to="." method="_on_p1_a3_button_focus_entered"]
[connection signal="toggled" from="Control/P1HBoxContainer/P1A3Button" to="." method="_on_p1_a3_button_toggled"]
[connection signal="mouse_entered" from="Control/HBoxContainer" to="." method="_on_p1_hbox_container_mouse_entered"]
[connection signal="mouse_exited" from="Control/HBoxContainer" to="." method="_on_p1_hbox_container_mouse_exited"]
[connection signal="mouse_entered" from="Control2/P2HBoxContainer/P2A1Button" to="." method="_on_p2_a1_button_mouse_entered"]
[connection signal="mouse_exited" from="Control2/P2HBoxContainer/P2A1Button" to="." method="_on_p2_a1_button_mouse_exited"]
[connection signal="toggled" from="Control2/P2HBoxContainer/P2A1Button" to="." method="_on_p2_a1_button_toggled"]
[connection signal="mouse_entered" from="Control2/P2HBoxContainer/P2A2Button" to="." method="_on_p2_a2_button_mouse_entered"]
[connection signal="mouse_exited" from="Control2/P2HBoxContainer/P2A2Button" to="." method="_on_p2_a2_button_mouse_exited"]
[connection signal="toggled" from="Control2/P2HBoxContainer/P2A2Button" to="." method="_on_p2_a2_button_toggled"]
[connection signal="mouse_entered" from="Control2/P2HBoxContainer/P2A3Button" to="." method="_on_p2_a3_button_mouse_entered"]
[connection signal="mouse_exited" from="Control2/P2HBoxContainer/P2A3Button" to="." method="_on_p2_a3_button_mouse_exited"]
[connection signal="toggled" from="Control2/P2HBoxContainer/P2A3Button" to="." method="_on_p2_a3_button_toggled"]
[connection signal="pressed" from="VoltarButton" to="." method="_on_voltar_button_pressed"]
